@@ -1,5 +1,15 @@
 2013-02-05  Benjamin Poulain  <bpoulain@apple.com>
 
+        Rationalize the use of iOS/Mac #defines in Assertions.cpp
+        https://bugs.webkit.org/show_bug.cgi?id=108870
+
+        Reviewed by David Kilzer.
+
+        * wtf/Assertions.cpp: Instead of using PLATFORM(MAC) and assume it works for iOS and OS X,
+        use CF as the guard for CFString. Similarily, USE_APPLE_SYSTEM_LOG guards code using ASL.
+
+2013-02-05  Benjamin Poulain  <bpoulain@apple.com>
+
         Make StringBuilder::toAtomicString() consistent with StringBuilder::toString() for strings of length zero
         https://bugs.webkit.org/show_bug.cgi?id=108894
 
